Updated Dashboard and Home HTML files to fix navigation links and added LeaderBoard.html. Updated Dashboard.css for styling.

--- a/html/home.html
+++ b/html/home.html
@@ -18,9 +18,10 @@
     </div>
     <ul class="nav-links">
       <li><a href="#" class="active">Home</a></li>
-      <li><a href="#">DashBoard</a></li>
+      <li><a href="./Dashboard.html">DashBoard</a></li>
       <li><a href="./game.html">Games</a></li>
       <li><a href="./Learn.html">Learn</a></li>
+       <li><a href="leaderboard.html" class="nav-item">Elite Board</a></li>
     </ul>
     <div>
       <a href="#" class="contact-btn">Contact Us</a>
