--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CyberGuard Academy - Dashboard</title>
-    <!-- <link rel="stylesheet" href="../css/Shared.css">
-    <link rel="stylesheet" href="../css/Dashboard.css"> -->
+    <link rel="stylesheet" href="../css/Dashboard.css">
 </head>
 <body>
     <!-- Navigation -->
@@ -15,13 +14,13 @@
                 <div class="brand-icon">⚡</div>
                 <span class="brand-text">CyberGuard<span class="brand-accent">Elite</span></span>
             </div>
-            <div class="nav-menu">
-                <a href="index.html" class="nav-item">Home</a>
-                <a href="dashboard.html" class="nav-item active">Command Center</a>
-                <a href="games.html" class="nav-item">Training Ops</a>
-                <a href="learn.html" class="nav-item">Intel Hub</a>
-                <a href="leaderboard.html" class="nav-item">Elite Board</a>
-            </div>
+             <ul class="nav-links">
+      <li><a href="./home.html" >Home</a></li>
+      <li><a href="#"class="active">DashBoard</a></li>
+      <li><a href="./game.html">Games</a></li>
+      <li><a href="./Learn.html">Learn</a></li>
+       <li><a href="leaderboard.html" class="nav-item">Elite Board</a></li>
+    </ul>
         </div>
     </nav>
 
