network game logic fixed

--- a/html/game.html
+++ b/html/game.html
@@ -151,19 +151,19 @@
           
           <div class="game-content">
             <div class="network-grid" id="networkGrid" role="list" aria-label="Network nodes">
-              <div class="network-node server" data-accept="Malware,Hacking" role="listitem" tabindex="0" aria-label="Server node">
+              <div class="network-node server" data-accept="Hacking" role="listitem" tabindex="0" aria-label="Server node">
                 <span>🖥️</span>
                 <label>Server</label>
               </div>
-              <div class="network-node workstation" data-accept="Phishing" role="listitem" tabindex="0" aria-label="Workstation node">
+              <div class="network-node workstation" data-accept="phishing" role="listitem" tabindex="0" aria-label="Workstation node">
                 <span>💻</span>
                 <label>Workstation</label>
               </div>
-              <div class="network-node router" data-accept="DDOS" role="listitem" tabindex="0" aria-label="Router node">
+              <div class="network-node router" data-accept="ddos" role="listitem" tabindex="0" aria-label="Router node">
                 <span>📡</span>
                 <label>Router</label>
               </div>
-              <div class="network-node database" data-accept="Data Leak, Unauthorised Access" role="listitem" tabindex="0" aria-label="Database node">
+              <div class="network-node database" data-accept="unauthorized" role="listitem" tabindex="0" aria-label="Database node">
                 <span>🗃️</span>
                 <label>Database</label>
               </div>
