--- a/html/home.html
+++ b/html/home.html
@@ -32,10 +32,12 @@
   <section class="hero">
     <div class="hero-content">
       <h1>
-        Welcome to <br />
-        <span class="gradient-text">Cyber-Guardian</span>
+       Don't Panic <br />
+        <span class="gradient-text">Take Control</span>
       </h1>
       <p class="subtext">
+        Cyberattacks are real , but you can defend yourself.<br/>
+        Learn how to protect your System with Cyber-Guardian.<br/>
         Protecting your digital world with cutting-edge cybersecurity solutions. Stay secure, stay confident.
       </p>
       <div class="hero-actions">
