added timer in ddos

--- a/html/game.html
+++ b/html/game.html
@@ -171,7 +171,7 @@
             
             <div class="threat-queue">
               <h4>Incoming Threat</h4>
-              <div id="currentThreat" class="threat-item" draggable="true" aria-grabbed="false" role="button" tabindex="0"></div>
+              <div id="currentThreat"  draggable="true" aria-grabbed="false" role="button" tabindex="0"></div>
               <p>Drag the threat and drop onto the correct network node to block it!</p>
               <div  class="threat-items" id="threatItems" aria-live="polite" aria-atomic="true"></div>
             </div>
