--- a/html/ddos-defence.html
+++ b/html/ddos-defence.html
@@ -13,7 +13,7 @@
         <div class="loading-content">
             <div class="loading-logo">🛡️</div>
             <div class="loading-text">INITIALIZING DEFENSE SYSTEMS...</div>
-            <button>STOP</button>
+
             <div class="loading-progress"></div>
         </div>
     </div>
@@ -23,9 +23,12 @@
         <header class="control-header">
             <div class="header-left">
                 <h1>🛡️ DDoS Defense Command Center</h1>
-                <div class="system-status">
+                <div class="system-status" style="display: flex; gap: 20px; align-items: center;">
                     <span class="status-indicator" id="system-status">READY</span>
                     <span class="uptime">Uptime: <span id="uptime">00:00:00</span></span>
+                    <span id="control-timer" style="color: red;">
+                        Attack Duration : <span id="attack-timer">0</span>
+                    </span>
                 </div>
             </div>
             <div class="header-right">
@@ -112,12 +115,12 @@
                         <div class="attack-point" style="top: 45%; left: 70%;" data-country="CN"></div>
                         <div class="attack-point" style="top: 55%; left: 15%;" data-country="BR"></div>
                     </div>
-                    <div class="attack-sources" id="attack-sources">
+                    <!-- <div class="attack-sources" id="attack-sources">
                         <div class="source-item">🇺🇸 United States: <span>0 attacks</span></div>
                         <div class="source-item">🇷🇺 Russia: <span>0 attacks</span></div>
                         <div class="source-item">🇨🇳 China: <span>0 attacks</span></div>
                         <div class="source-item">🇧🇷 Brazil: <span>0 attacks</span></div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <!-- Live Attack Log -->
@@ -153,7 +156,7 @@
                             <input type="range" id="timeout-duration" min="1" max="300" value="60">
                             <span class="setting-value" id="timeout-value">60</span>
                         </div>
-                        <div class="setting-group">
+                        <!-- <div class="setting-group">
                             <label>Geo-blocking:</label>
                             <select id="geo-blocking" multiple>
                                 <option value="CN">China</option>
@@ -161,7 +164,7 @@
                                 <option value="KP">North Korea</option>
                                 <option value="IR">Iran</option>
                             </select>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
