--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -110,8 +110,8 @@
                         <div class="score-item">
                             <div class="score-icon">🔐</div>
                             <div class="score-info">
-                                <div class="score-name">Password Fortress</div>
-                                <div class="score-value" id="bestPasswordScore">0/5</div>
+                                <div class="score-name">DDos Score</div>
+                                <div class="score-value" id="ddos-score">0/5</div>
                                 <div class="score-date" id="bestPasswordDate">Never played</div>
                             </div>
                         </div>
@@ -121,6 +121,14 @@
                                 <div class="score-name">Network Defense</div>
                                 <div class="score-value" id="bestNetworkScore">0</div>
                                 <div class="score-date" id="bestNetworkDate">Never played</div>
+                            </div>
+                        </div>
+                        <div class="score-item">
+                            <div class="score-icon">🛡️</div>
+                            <div class="score-info">
+                                <div class="score-name">Commands Learned</div>
+                                <div class="score-value" id="commands-learned">0</div>
+                                <div class="score-date" id="commands-learned-date">Never played</div>
                             </div>
                         </div>
                     </div>
