added captcha game

--- a/html/Captcha.html
+++ b/html/Captcha.html
@@ -29,7 +29,7 @@
             <div class="instructions card">
                 <div class="card__body">
                     <h2>🎯 Mission Instructions</h2>
-                    <p>Draw a straight line from <strong class="text-success">START</strong> to <strong class="text-danger">END</strong> to prove you're human. Our advanced behavioral analysis will detect bot-like movements.</p>
+                    <p>Draw a straight line from <strong class="text-success">START</strong> to <strong class="text-danger">END</strong> to prove you're BOT. Our advanced behavioral analysis will detect bot-like movements.</p>
                     <div class="instruction-steps">
                         <span class="step">1. Click and hold on START</span>
                         <span class="step">2. Draw toward END</span>
