--- a/html/game.html
+++ b/html/game.html
@@ -48,6 +48,18 @@
                         <div class="btn-glow"></div>
                     </button>
                 </div>
+                 <div class="game-card cyber-panel" data-game="network">
+                    <div class="notch"></div>
+                    <div class="blob"></div>
+                   <div class="game-icon">🛡️</div>
+                 <h3>Captcha Challenge</h3>
+                    <p>Prove you’re human by solving captchas</p>
+                    <a href="Captcha.html" class="btn btn-primary cyber-btn">
+                    <button class="btn btn-primary cyber-btn game-launch-btn">
+                        <span>LAUNCH TRAINING</span>
+                        <div class="btn-glow"></div>
+                    </button>
+                </div>
             </div>
         </div>
     </section>
