--- a/html/game.html
+++ b/html/game.html
@@ -54,8 +54,7 @@
                    <div class="game-icon">🛡️</div>
                  <h3>Captcha Challenge</h3>
                     <p>Prove you’re human by solving captchas</p>
-                    <a href="Captcha.html" class="btn btn-primary cyber-btn">
-                    <button class="btn btn-primary cyber-btn game-launch-btn">
+                    <button class="btn btn-primary cyber-btn game-launch-btn" onclick="window.location.href='./Captcha.html'">
                         <span>LAUNCH TRAINING</span>
                         <div class="btn-glow"></div>
                     </button>
