--- a/html/LandingPage.html
+++ b/html/LandingPage.html
@@ -3,12 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Cyberpunk Landing</title>
+    <title>Cyberpunk Glitch Landing</title>
+
+    <!-- Preload critical CSS -->
+    <link rel="preload" href="../css/LandingPage.css" as="style" />
     <link rel="stylesheet" href="../css/LandingPage.css" />
+    <link rel="stylesheet" href="../css/glitch.css" />
+
+    <!-- Preload JS -->
+    <link rel="preload" href="../js/LandingPage.js" as="script" />
   </head>
   <body>
     <!-- LOADER -->
-    <div id="loader">
+    <div id="loader" role="status" aria-label="Loading">
       <div class="loader">
         <span><span></span><span></span><span></span><span></span></span>
         <div class="base">
@@ -22,32 +29,34 @@
       <div id="loading">Initializing...</div>
     </div>
 
-    <!-- LANDING PAGE CONTENT -->
-    <div id="main-content">
+    <!-- MAIN CONTENT -->
+    <div id="main-content" hidden>
+      <!-- Code Animation -->
       <div id="code-container"></div>
 
+      <!-- Glitch Overlays -->
+      <div class="glitch-overlay"></div>
+      <div class="noise"></div>
+      <div class="scan-lines"></div>
+      <div class="rgb-split"></div>
+
       <!-- Popup Overlay -->
-      <div id="popup-overlay">
-       
-      </div>
+      <div id="popup-overlay" aria-hidden="true"></div>
 
+      <!-- Vignette -->
       <div id="vignette"></div>
-    </div>
 
-   
-
-
-    <!-- Panels -->
-      <div class="panel hacked">
+      <!-- Panels -->
+      <section class="panel hacked">
         <h3>ACCESS GRANTED</h3>
         <pre>
 STATUS: SYSTEM BREACH
 OVERRIDE SUCCESSFUL
 NODE UNLOCKED: ROOT
         </pre>
-      </div>
+      </section>
 
-      <div class="panel network">
+      <section class="panel network">
         <h3>NETWORK PROTOCOL ANALYZER</h3>
         <pre>
 function scanPackets() {
@@ -55,9 +64,9 @@ function scanPackets() {
   console.log("Sniffing:", ip);
 }
         </pre>
-      </div>
+      </section>
 
-      <div class="panel hardware">
+      <section class="panel hardware">
         <h3>SYSTEM HARDWARE ANALYZER</h3>
         <pre>
 CPU: Intel i7 4.0GHz
@@ -65,9 +74,9 @@ RAM: 16 GB
 GPU: NVIDIA RTX 3080
 TEMP: 67°C
         </pre>
-      </div>
+      </section>
 
-      <div class="panel source">
+      <section class="panel source">
         <h3>SOURCE CODE ANALYZER</h3>
         <pre>
 var net = require('net');
@@ -75,12 +84,31 @@ server.on('connection', function(socket) {
    socket.write("Hacked!\n");
 });
         </pre>
-      </div>
-  <!-- Final Warning Panel -->
-    <div class="panel warning">
-      <h2>⚠ SYSTEM HACKED ⚠</h2>
-      <p>Critical Security Breach Detected</p>
+      </section>
+
+      <!-- Final Warning Panel -->
+      <section class="panel warning">
+        <h2>⚠ SYSTEM HACKED ⚠</h2>
+        <p>Critical Security Breach Detected</p>
+      </section>
     </div>
-     <script src="../js/LandingPage.js"></script>
-</body>
+
+    <!-- Blank Screen Transition -->
+    <div
+      id="blank-screen"
+      style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: black;
+        z-index: 2000;
+        display: none;
+      "
+    ></div>
+
+    <!-- JS -->
+    <script src="../js/LandingPage.js" defer></script>
+  </body>
 </html>
