Implemented header in all pages and removed leaderboard page.

--- a/html/Learn.html
+++ b/html/Learn.html
@@ -36,10 +36,21 @@
 
     <!-- Main Terminal Interface -->
     <div id="main-interface" class="hidden">
+       
         <!-- Header -->
         <header class="terminal-header">
+              <nav class="navbar">
+    <h1 class="glitch-title" data-text="CYBER TERMINAL">CYBER TERMINAL</h1>
+      <ul class="nav-links">
+        <li><a href="./home.html">Home</a></li>
+        <li><a href="./Dashboard.html">DashBoard</a></li>
+        <li><a href="#" class="active">Games</a></li>
+        <li><a href="./Learn.html">Learn</a></li>
+        <li><a href="./ddos-defence.html">DDOS</a></li>
+      </ul>
+    </nav>
             <div class="header-content">
-                <h1 class="glitch-title" data-text="CYBER TERMINAL">CYBER TERMINAL</h1>
+            
                 <div class="system-info">
                     <span class="info-item">USER: cyberguard</span>
                     <span class="info-item">HOST: security-lab</span>
