--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -11,17 +11,20 @@
     <nav class="cyber-nav">
         <div class="nav-container">
             <div class="nav-brand">
-                <span class="brand-icon">🛡️</span>
+                <span class="brand-icon">🛡️</span>   
                 <span class="brand-text">Cyber<span class="brand-accent">Guard</span></span>
             </div>
-            <ul class="nav-links">
-                <li><a href="./Dashboard.html" class="active">Dashboard</a></li>
-                <li><a href="./game.html">Games</a></li>
-                <li><a href="./Learn.html">Learn</a></li>
-                <li><a href="./ddos-defence.html">DDoS Defense</a></li>
-            </ul>
+             <ul class="nav-links">
+        <li><a href="./home.html">Home</a></li>
+        <li><a href="#" class="active">DashBoard</a></li>
+        <li><a href="./game.html">Games</a></li>
+        <li><a href="./Learn.html">Learn</a></li>
+        <li><a href="./ddos-defence.html">DDOS</a></li>
+      </ul>
         </div>
     </nav>
+
+    
 
     <!-- Main Dashboard Section -->
     <main class="section">
