fixed score in escape

--- a/html/Escape.html
+++ b/html/Escape.html
@@ -152,7 +152,7 @@
                     <div class="card__body">
                         <h3>📊 Final Score</h3>
                         <div class="final-score">
-                            <span id="final-score">0</span> / 1000
+                            <span id="final-score">0</span>
                         </div>
                         <div class="performance-metrics">
                             <div class="metric">
@@ -175,8 +175,8 @@
                 </div>
                 
                 <div class="victory-actions">
-                    <button class="btn btn--primary btn--lg" onclick="restartGame()">🔄 Play Again</button>
-                    <button class="btn btn--secondary btn--lg" onclick="showWelcome()">📚 Learn More</button>
+
+                    <button class="btn btn--secondary btn--lg"><a href="game.html">Other Games</a></button>
                 </div>
             </div>
         </div>
