Changed the navbar link  and name from "Learn" to "Cyber Library" and adjusted the gap between the links in the navbar for better spacing.

--- a/html/Captcha.html
+++ b/html/Captcha.html
@@ -9,6 +9,7 @@
 <body>
     <div class="container">
         <!-- Header -->
+            <button class="close-btn" onclick="window.location.href='../html/game.html'">x</button> 
         <header class="header">
             <div class="header-content">
                 <h1 class="header-title">
