--- a/html/ddos-defence.html
+++ b/html/ddos-defence.html
@@ -27,9 +27,9 @@
       <ul class="nav-links">
         <li><a href="./home.html">Home</a></li>
         <li><a href="./Dashboard.html">DashBoard</a></li>
-        <li><a href="#" class="active">Games</a></li>
-        <li><a href="./Learn.html">Learn</a></li>
-        <li><a href="./ddos-defence.html">DDOS</a></li>
+        <li><a href="game.html">Games</a></li>
+        <li><a href="./Learn.html">Cyber-Library</a></li>
+        <li><a href="#" class="active">DDOS</a></li>
       </ul>
     </nav>
 
