--- a/html/home.html
+++ b/html/home.html
@@ -25,11 +25,11 @@
         <li><a href="#" class="active">Home</a></li>
         <li><a href="./Dashboard.html">DashBoard</a></li>
         <li><a href="./game.html">Games</a></li>
-        <li><a href="./Learn.html">Learn</a></li>
+        <li><a href="./Learn.html">Cyber Library</a></li>
         <li><a href="./ddos-defence.html">DDOS</a></li>
       </ul>
       <div>
-        <a href="#" class="contact-btn">Contact Us</a>
+        <a href="./priviledge.html" class="contact-btn">We are being watched-See how</a>
       </div>
     </nav>
 
