--- a/html/priviledge.html
+++ b/html/priviledge.html
@@ -10,6 +10,11 @@
     <div class="container">
         <!-- Initial Setup Interface -->
         <div class="screen" id="introScreen">
+        <a href="./home.html" class="prev-btn">
+    ⬅️
+</a>
+
+
             <header class="header">
                 <div class="header-content">
                     <h1 class="header-title">
@@ -52,7 +57,15 @@
                             <h3>About This Demo</h3>
                             <p>You'll experience a simulated malware installation and see real-time monitoring in action. Everything is safe and contained within this educational environment.</p>
                         </div>
-
+                        <div class="demo-instructions">
+                            <h3>Instructions</h3>
+                            <ol>
+                                <li>Click "Start Security Demo" to begin the installation simulation.</li>
+                                <li>When prompted, grant administrative permissions to the "software".</li>
+                                <li>Use the virtual desktop to type, copy text, access files, and visit websites.</li>
+                                <li>Observe how the "software" monitors your activities in real-time.</li>
+                                <li>Complete the demo to learn how to protect yourself from such threats.</li>
+                            </ol>
                         <button class="btn btn--primary btn--lg" id="startDemoBtn">Start Security Demo</button>
                     </div>
                 </div>
