--- a/html/Learn.html
+++ b/html/Learn.html
@@ -44,8 +44,8 @@
       <ul class="nav-links">
         <li><a href="./home.html">Home</a></li>
         <li><a href="./Dashboard.html">DashBoard</a></li>
-        <li><a href="#" class="active">Games</a></li>
-        <li><a href="./Learn.html">Learn</a></li>
+        <li><a href="game.html">Games</a></li>
+        <li><a href="#" class="active">Cyber Library</a></li>
         <li><a href="./ddos-defence.html">DDOS</a></li>
       </ul>
     </nav>
