fixed infinite calls

--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -40,7 +40,7 @@
                 <div class="pulse-dot"></div>
                     <span>LIVE DASHBOARD</span>
                 </div>
-            <div class="user-stats">
+            <!-- <div class="user-stats">
                 <div class="stat-item">
                     <span class="stat-label">Level</span>
                     <span class="stat-value" id="userLevel">1</span>
@@ -57,11 +57,11 @@
                     <span class="stat-label">Streak</span>
                     <span class="stat-value" id="userStreak">0</span>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <!-- Level Progress Panel (Original Layout) -->
-        <div class="level-progress-panel">
+        <!-- <div class="level-progress-panel">
             <div class="level-info">
                 <span>Level <span id="currentLevel">1</span> → Level <span id="nextLevel">2</span></span>
                 <span class="level-xp"><span id="currentXP">0</span> XP / <span id="nextLevelXP">500</span> XP</span>
@@ -70,7 +70,7 @@
                 <div class="progress-fill" id="levelProgressFill"></div>
             </div>
             <div class="level-time">XP to next level: <span id="xpToNext">500</span></div>
-        </div>
+        </div> -->
 
         <!-- Dashboard Grid (Original Layout) -->
         <div class="dashboard-grid">
