--- a/html/home.html
+++ b/html/home.html
@@ -29,7 +29,8 @@
         <li><a href="./ddos-defence.html">DDOS</a></li>
       </ul>
       <div>
-        <a href="./priviledge.html" class="contact-btn">We are being watched-See how</a>
+          <a href="./Contactus.html" class="outline-btn">Contact us </a>
+   
       </div>
     </nav>
 
@@ -51,7 +52,7 @@
         </p>
         <div class="hero-actions">
           <a href="./game.html" class="main-btn">Get Started With Games</a>
-          <a href="./Learn.html" class="outline-btn">Learn More</a>
+             <a href="./priviledge.html" class="contact-btn">We are being watched-See how</a>
         </div>
       </div>
     </section>
