--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -257,14 +257,14 @@
             </div>
 
             <!-- Recent Activity (Original Layout) -->
-            <div class="cyber-panel">
+            <!-- <div class="cyber-panel">
                 <h3>🕐 Recent Activity</h3>
                 <div class="activity-list" id="activityList">
                     <div class="activity-placeholder">
                         Complete your first training to see activity here!
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Learning Progress (Original Layout) -->
             <div class="cyber-panel">
@@ -286,7 +286,7 @@
             </div>
 
             <!-- Data Management (Original Layout) -->
-            <div class="cyber-panel">
+            <!-- <div class="cyber-panel">
                 <h3>💾 Data Management</h3>
                 <div class="data-info">
                     <div class="data-stats">
@@ -301,7 +301,7 @@
                         <button class="cyber-btn danger" id="resetData">🗑️ Reset</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
